--- a/taterstyle.css
+++ b/taterstyle.css
@@ -13,3 +13,15 @@ h1 {
     text-decoration: underline;
     font-family: fantasy;
 }
+
+.tube {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.see {
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
